Agregando Datos cliente

--- a/src/routes/user/producto.ejs
+++ b/src/routes/user/producto.ejs
@@ -30,7 +30,7 @@
             <div class="info-container">
                 <div>
                     <p style="font-size: 1.8vmin;">Inicio > <%= producto.nombre_producto %></p>
-                    <h2><%= producto.tipo %> <%= producto.nombre_producto %></h2>
+                    <h2><%= producto.nombre_producto %></h2>
                     <p style="line-height: 1.5;">
                         Unidades Disponibles: <%= producto.stock %><br>
                         Categoria: <%= producto.tipo %>
