--- a/src/routes/admin/estadistica.ejs
+++ b/src/routes/admin/estadistica.ejs
@@ -70,7 +70,7 @@
                     <tbody>
                         <% vendidos.forEach(producto => { %>
                             <tr>
-                                <td><%= producto.nombre %></td>
+                                <td><%= producto.nombre_producto %></td>
                                 <td><%= producto.ingresos %>$</td>
                             </tr>
                         <% }); %>
