--- a/src/routes/admin/envios.ejs
+++ b/src/routes/admin/envios.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Gerente</title>
     <link rel="stylesheet" href="/css/admin/envios.css">
-    <link rel="stylesheet" href="../../../public/css/admin/header.css">
+    <link rel="stylesheet" href="/css/admin/header.css">
+    <link rel="shortcut icon" href="/images/Logo/logo-landing.png" type="image/x-icon">
 </head>
 <body>
     <%- include('../partials/header'); %>
