--- a/public/css/admin/header.css
+++ b/public/css/admin/header.css
@@ -3,7 +3,7 @@ header{
 }
 header .Content__header{
     width: 100%;
-    height: 65px;
+    height: 10vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
