--- a/src/routes/admin/avisos.ejs
+++ b/src/routes/admin/avisos.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Avisos</title>
     <link rel="stylesheet" href="/css/admin/avisos.css">
+    <link rel="shortcut icon" href="/images/Logo/logo-landing.png" type="image/x-icon">
 </head>
 <body>
     <%- include('../partials/header'); %>
