--- a/src/routes/admin/consulta.ejs
+++ b/src/routes/admin/consulta.ejs
@@ -23,6 +23,24 @@
                 <option value="1">Control</option>
             </select>
         </section>
+        <section>
+            <table id="tableConsulta">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Control</th>
+                        <th>Fecha</th>
+                        <th>Usuario</th>
+                        <th>Base</th>
+                        <th>IVA(%)</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+                <tbody id="tbodyConsulta">
+
+                </tbody>
+            </table>
+        </section>
     </main>
     <script src="/js/admin/consulta.js"></script>
 </body>
