Arreglando PDF Factura

--- a/src/routes/admin/consulta.ejs
+++ b/src/routes/admin/consulta.ejs
@@ -43,7 +43,7 @@
         </section>
         <br>
 
-        <p>Consulte el usuario indicando el identificador(ID) </p>
+        <p>Consulte el usuario indicando el identificador(ID) o la Cedula(C.I)</p>
         <section id="containerInputUsuario">
             <label for="inputUsuario">
                 <img alt="Lupa" src="/images/icons/search.png" id="lupaUsuario">
