--- a/src/routes/user/payment.ejs
+++ b/src/routes/user/payment.ejs
@@ -84,6 +84,7 @@
                         <p>Cedula: 30.640.838</p>
                         <p>Numero: 0414-4019911</p>
                         <p>Banco: BNC</p>
+                        <input type="number" placeholder="Ultimos 4 Digitos" class="inputs">
                     </div>
                 </article>
             </section>
