Optimizacion de Dashboard

--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -16,7 +16,7 @@
                 <article>
                     <h4>Productos en Inventario</h4>
                     <div>
-                        <span><%= inventario.length %></span>
+                        <span><%= inventario %></span>
                         <button onclick="window.location.href='/admin/inventario'">Ver Detalles
                             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                         </button>
@@ -25,7 +25,7 @@
                 <article>
                     <h4>Registro de Ventas</h4>
                     <div>
-                        <span><%= ventas.length %></span>
+                        <span><%= ventas %></span>
                         <button onclick="window.location.href='/admin/estadistica'">Ver Detalles
                             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                         </button>
@@ -34,7 +34,7 @@
                 <article>
                     <h4>Pedidos</h4>
                     <div>
-                        <span><%= envios.length %></span>
+                        <span><%= envios %></span>
                         <button onclick="window.location.href='/admin/envios'">Ver Detalles
                             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                         </button>
