--- a/src/routes/admin/consulta.ejs
+++ b/src/routes/admin/consulta.ejs
@@ -15,7 +15,7 @@
         <p>Consulte su Factura indicando el identificador(ID) o El numero de Control </p>
         <section id="containerInputConsulta">
             <label for="inputConsulta">
-                <img alt="Lupa" src="/images/icons/search.png" id="lupaConsulta">
+                <img alt="Lupa" src="/images/icons/Search.png" id="lupaConsulta">
             </label>
             <input type="number" placeholder="ID" id="inputConsulta">
             <select id="selectConsulta">
@@ -46,7 +46,7 @@
         <p>Consulte el usuario indicando el identificador(ID) o la Cedula(C.I)</p>
         <section id="containerInputUsuario">
             <label for="inputUsuario">
-                <img alt="Lupa" src="/images/icons/search.png" id="lupaUsuario">
+                <img alt="Lupa" src="/images/icons/Search.png" id="lupaUsuario">
             </label>
             <input type="number" placeholder="ID" id="inputUsuario">
             <select id="selectUsuario">
