--- a/src/routes/admin/mayorista.ejs
+++ b/src/routes/admin/mayorista.ejs
@@ -15,7 +15,7 @@
             <div class="input--Container">
                 <input type="search" placeholder="Destino" id="Destino">
                 <label for="Destino">
-                    <img alt="Lupa" src="/images/icons/search.png" id="Destino">
+                    <img alt="Lupa" src="/images/icons/Search.png" id="Destino">
                 </label>
             </div>
             <div class="Minorista--Mayorista">
