--- a/src/routes/admin/proveedor.ejs
+++ b/src/routes/admin/proveedor.ejs
@@ -40,7 +40,7 @@
                 <div class="Input--Container">
                     <input type="search" placeholder="Buscar proveedor" id="Lupa">
                     <label for="Lupa">
-                        <img src="/images/icons/search.png" alt="Lupa" id="Lupa">
+                        <img src="/images/icons/Search.png" alt="Lupa" id="Lupa">
                     </label>
                 </div>
                 <table>
